@@ -26,6 +26,7 @@ v2.0.0:
  - input: removed GLFW input implementation
  - input: added set_mouse_cursor() and reset_mouse_cursor()
  - input: added get_interface_scaling_factor_hint()
+ - input: added set_interface_scaling_factor()
  - gui: added a pure SFML implementation for the gui::manager
  - gui: added a pure SDL implementation for the gui::manager
  - gui: added a "modern" OpenGL 3 implementation, alternative to fixed pipeline legacy OpenGL
